src/cbmc_starter_kit/template-for-repository/negative_tests/unsigned_overflow_check/unsigned_overflow_check_harness.c
/**
 * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 * SPDX-License-Identifier: MIT-0.
 */

/**
 * A negative test for --unsigned-overflow-check flag
 */
void unsigned_overflow_check_harness() {
    unsigned overflow, offset;
    overflow += offset;
}
